--- a/index.html
+++ b/index.html
@@ -1,18 +1,168 @@
 <!DOCTYPE html>
-<head> <!-- The head tag includes important information about the page -->
-  <meta charset="UTF-8"> <!-- This line defines something called "character encoding"
-  This will allow the browser to display certain characters (such as non-Roman letters) correctly.
-  You should include this line in the head of all of your webpages. -->
-  <title>Ketogenic Diet 101</title> <!-- This is the title of your page (what appears in the name of a browser tab) -->
-  <link rel="stylesheet" href="style.css"> <!-- This line links your CSS stylesheet to your HTML (see Lesson 1.3) -->
+<head>
+  <meta charset="UTF-8">
+  <title>Ketogenic Diet 101</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <nav class="column1">Nav</nav>
-  <div class="column2">
-  	<header>Header</header>
-    <main class="content">
-    <article>Article</article>
-    </main>
-  	<footer>Footer</footer>
-  </div>
+  <nav class="navigation">
+    <div>The Ketogenic Diet 101</div>
+    <div>
+      <ul>
+        <li><a href="introduction">Introduction</a></li>
+        <li><a href="whatis">What is a Ketogenic Diet?</a></li>
+        <li><a href="difftype">Different Types of Ketogenic Diets</a></li>
+        <li><a href="ketoloseweight"></a> Ketogenic Diets Can Help You Lose Weight</li>
+        <li><a href="ketodiabetes"></a> Ketogenic Diets for Diabetes and Prediabetes</li>
+        <li><a href="otherbenefits"></a> Other Health Benefits of the Ketogenic Diet</li>
+        <li><a href="food2avoid"></a> Foods to Avoid</li>
+        <li><a href="foods2eat"></a> Foods to Eat</li>
+        <li><a href="tips4eating"></a> Tips for Eating Out on a Ketogenic Die</li>
+        <li><a href="sideeffects"></a> Side Effects and How to Minimize Them</li>  
+      </ul>
+    </div>
+  </nav>
+</body>
+</html>
+  <main class="content">
+    <article>
+      <div id="introduction">
+        <h1>The Ketogenic Diet 101: A Detailed Beginner's Guide </h1>
+        <p>The ketogenic diet is a low-carb, high-fat diet that offers many health benefits. </p>
+        <p>Over 20 studies show that this type of diet can help you lose weight and improve health.</p>
+        <p>Ketogenic diets may even have benefits against diabetes, cancer, epilepsy and Alzheimer's disease.</p>
+        <p>This article is a detailed beginner's guide to the ketogenic diet.</p>
+        <p>It contains everything you need to know.</p>             
+      </div>
+      <br>
+      <div id="whatis">
+        <h2>What is a Ketogenic Diet?</h2>
+        <p>The ketogenic diet (often termed keto) is a very low-carb, high-fat diet that shares many similarities with the Atkins and low-carb diets.</p>
+        <p>It involves drastically reducing carbohydrate intake, and replacing it with fat. The reduction in carbs puts your body into a metabolic state called ketosis.</p>
+        <p>When this happens, your body becomes incredibly efficient at burning fat for energy. It also turns fat into ketones in the liver, which can supply energy for the brain.</p>
+        <p>Ketogenic diets can cause massive reductions in blood sugar and insulin levels. This, along with the increased ketones, has numerous health benefits.</p>
+      </div>
+      <br>
+      <div id="difftype">
+        <h2>Different Types of Ketogenic Diets</h2>
+        <p>There are several versions of the ketogenic diet, including:</p>
+        <p>
+          <ul>
+            <li><b>Standard ketogenic diet (SKD):</b> This is a very low-carb, moderate-protein and high-fat diet. It typically contains 75% fat, 20% protein and only 5% carbs (1).</li>
+            <li><b>Cyclical ketogenic diet (CKD):</b>  This diet involves periods of higher-carb refeeds, such as 5 ketogenic days followed by 2 high-carb days.</li>
+            <li><b>Targeted ketogenic diet (TKD):</b> This diet allows you to add carbs around workouts.</li>
+            <li><b>High-protein ketogenic diet:</b> This is similar to a standard ketogenic diet, but includes more protein. The ratio is often 60% fat, 35% protein and 5% carbs.</li>    
+          </ul>
+        </p>
+        <p>However, only the standard and high-protein ketogenic diets have been studied extensively. Cyclical or targeted ketogenic diets are more advanced methods, and primarily used by bodybuilders or athletes.</p>
+        <p>The information in this article mostly applies to the standard ketogenic diet (SKD), although many of the same principles also apply to the other versions.</p>
+      </div>
+      <br>
+      <div id="ketoloseweight">
+        <h2>Ketogenic Diets Can Help You Lose Weight</h2>
+        <p>A ketogenic diet is an effective way to lose weight and lower risk factors for disease.</p>
+        <p>In fact, research shows that the ketogenic diet is far superior to the recommended low-fat diet.</p>
+        <p>What's more, the diet is so filling that you can lose weight without counting calories or tracking your food.</p>
+        <p>One study found that people on a ketogenic diet lost 2.2 times more weight than those on a calorie-restricted low-fat diet. Triglyceride and HDL cholesterol levels also improved.</p>
+        <p>Another study found that participants on the ketogenic diet lost 3 times more weight than those on the Diabetes UK's recommended diet.</p>
+        <p>There are several reasons why a ketogenic diet is superior to a low-fat diet. One is the increased protein intake, which provides numerous benefits.</p>
+        <p>The increased ketones, lowered blood sugar levels and improved insulin sensitivity may also play a key role.</p>
+        <p>For more details on the weight loss effects of a ketogenic diet, read this article: A Ketogenic Diet to Lose Weight and Fight Disease.</p>
+      </div>
+      <br>
+      <div id="ketodiabetes">
+        <h2>Ketogenic Diets for Diabetes and Prediabetes</h2>
+        <p>Diabetes is characterized by changes in metabolism, high blood sugar and impaired insulin function.</p>
+        <p>The ketogenic diet can help you lose excess fat, which is closely linked to type 2 diabetes, prediabetes and metabolic syndrome.</p>
+        <p>One study found that the ketogenic diet improved insulin sensitivity by a whopping 75%.</p>
+        <p>Another study in patients with type 2 diabetes found that 7 of the 21 participants were able to stop all diabetes medications.</p>
+        <p>In yet another study, the ketogenic group lost 24.4 lbs (11.1 kg), compared to 15.2 lbs (6.9 kg) in the higher-carb group. This is an important benefit when considering the link between weight and type 2 diabetes.</p>
+        <p>Additionally, 95.2% of the ketogenic group was also able to stop or reduce diabetes medication, compared to 62% in the higher-carb group.</p>
+      </div>
+      <br>
+      <div id="otherbenefits">
+        <h2>Other Health Benefits of the Ketogenic Diet</h2>
+        <p>The ketogenic diet actually originated as a tool for treating neurological diseases, such as epilepsy.</p>
+        <p>Studies have now shown that the diet can have benefits for a wide variety of different health conditions:</p>
+        <p>
+          <ul>
+            <li><b>Heart disease:</b> The ketogenic diet can improve risk factors like body fat, HDL levels, blood pressure and blood sugar.</li>
+            <li><b>Cancer:</b> The diet is currently being used to treat several types of cancer and slow tumor growth.</li>
+            <li><b>Alzheimer's disease:</b> The diet may reduce symptoms of Alzheimer's and slow down the disease's progression.</li>
+            <li><b>Epilepsy:</b> Research has shown that the ketogenic diet can cause massive reductions in seizures in epileptic children.</li>
+            <li><b>Parkinson's disease:</b> One study found that the diet helped improve symptoms of Parkinson's disease.</li>
+            <li><b>Polycystic ovary syndrome:</b> The ketogenic diet can help reduce insulin levels, which may play a key role in polycystic ovary syndrome.</li>
+            <li><b>Brain injuries:</b> One animal study found that the diet can reduce concussions and aid recovery after brain injury.</li>
+            <li><b>Acne:</b> Lower insulin levels and eating less sugar or processed foods may help improve acne.</li>
+          </ul>
+        </p>
+        <p>However, keep in mind that research into many of these areas is far from conclusive.</p>
+      </div>
+      <br>
+      <div id="food2avoid">
+        <h2 >Foods to Avoid</h2>
+        <p>In short, any food that is high in carbs should be limited.</p>
+        <p>Here is a list of foods that need to be reduced or eliminated on a ketogenic diet:</p>
+        <p>
+          <ul>
+            <li><b>Sugary foods:</b> Soda, fruit juice, smoothies, cake, ice cream, candy, etc.</li>
+            <li><b>Grains or starches:</b> Wheat-based products, rice, pasta, cereal, etc.</li>
+            <li><b>Fruit:</b> All fruit, except small portions of berries like strawberries.</li>
+            <li><b>Beans or legumes:</b> Peas, kidney beans, lentils, chickpeas, etc.</li>
+            <li><b>Root vegetables and tubers:</b> Potatoes, sweet potatoes, carrots, parsnips, etc.</li>
+            <li><b>Low-fat or diet products:</b> These are highly processed and often high in carbs.</li>
+            <li><b>Some condiments or sauces:</b> These often contain sugar and unhealthy fat.</li>
+            <li><b>Unhealthy fat:</b> Limit your intake of processed vegetable oils, mayonnaise, etc.</li>
+            <li><b>Alcohol:</b> Due to its carb content, many alcoholic beverages can throw you out of ketosis.</li>
+            <li><b>Sugar-free diet foods:</b> These are often high in sugar alcohols, which can affect ketone levels in some cases. These foods also tend to be highly processed.</li>
+          </ul>
+        </p>
+      </div>
+      <br>
+      <div id="foods2eat">
+        <h2>Foods to Eat</h2>
+        <p>You should base the majority of your meals around these foods:</p>
+        <p>
+          <ul>
+            <li><b>Meat:</b> Red meat, steak, ham, sausage, bacon, chicken and turkey.</li>
+            <li><b>Fatty fish:</b> Such as salmon, trout, tuna and mackerel.</li>
+            <li><b>Eggs:</b> Look for pastured or omega-3 whole eggs.</li>
+            <li><b>Butter and cream:</b> Look for grass-fed when possible.</li>
+            <li><b>Cheese:</b> Unprocessed cheese (cheddar, goat, cream, blue or mozzarella).</li>
+            <li><b>Nuts and seeds:</b> Almonds, walnuts, flaxseeds, pumpkin seeds, chia seeds, etc.</li>
+            <li><b>Healthy oils:</b> Primarily extra virgin olive oil, coconut oil and avocado oil.</li>
+            <li><b>Avocados:</b> Whole avocados or freshly made guacamole.</li>
+            <li><b>ow-carb veggies:</b>L Most green veggies, tomatoes, onions, peppers, etc.</li>
+            <li><b>Condiments:</b> You can use salt, pepper and various healthy herbs and spices.</li>
+          </ul>
+        </p>
+        <p>It is best to base your diet mostly on whole, single ingredient foods. Here is a list of 44 healthy low-carb foods.</p>
+      </div>
+      <br>
+      <div id="tips4eating">
+        <h2>Tips for Eating Out on a Ketogenic Diet</h2>
+        <p>It is not very hard to make most restaurant meals keto-friendly when eating out.</p>
+        <p>Most restaurants offer some kind of meat or fish-based dish. Order this, and replace any high-carb food with extra vegetables.</p>
+        <p>Egg-based meals are also a great option, such as an omelet or eggs and bacon.</p>
+        <p>Another favorite is bun-less burgers. You could also leave the bun and swap the fries for vegetables instead. Add extra avocado, cheese, bacon or eggs.</p>
+        <p>At Mexican restaurants, you can enjoy any type of meat with extra cheese, guacamole, salsa and sour cream.</p>
+        <p>For dessert, ask for a mixed cheese board or double cream with berries.</p>
+      </div>
+      <br>
+      <div id="sideeffects">
+        <h2>Side Effects and How to Minimize Them</h2>
+        <p>Although the ketogenic diet is safe for healthy people, there may be some initial side effects while your body adapts.</p>
+        <p>This is often referred to as "keto flu" - and is usually over within a few days.</p>
+        <p>Keto flu includes poor energy and mental function, increased hunger, sleep issues, nausea, digestive discomfort and decreased exercise performance.</p>
+        <p>In order to minimize this, you can try a regular low-carb diet for the first few weeks. This may teach your body to burn more fat before you completely eliminate carbs.</p>
+        <p>A ketogenic diet can also change the water and mineral balance of your body, so adding extra salt to your meals or taking mineral supplements can help.</p>
+        <p>For minerals, try taking 3,000–4,000 mg of sodium, 1,000 mg of potassium and 300 mg of magnesium per day to minimize side effects.</p>
+        <p>At least in the beginning, it is important to eat until fullness and to avoid restricting calories too much. Usually a ketogenic diet causes weight loss without intentional calorie restriction.</p>
+      </div>
+      <br><br>
+      <div>
+        <p>Credits to Healthline article <a href="https://www.healthline.com/nutrition/ketogenic-diet-101" target="_blank">here.</a></p>
+      </div>
+    </article>
+  </main>
 </body>
