add comments on my code

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <title>Ketogenic Diet 101</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <nav class="navigation">
+<body> <!-- ***** body begins here ***** -->
+  <nav class="navigation"> <!-- ***** navigation ***** -->
     <div>The Ketogenic Diet 101</div>
     <div>
       <ul>
@@ -22,10 +22,8 @@
       </ul>
     </div>
   </nav>
-</body>
-</html>
-  <main class="content">
-    <article>
+  <main class="content"> <!-- ***** main ***** -->
+    <article>  <!-- ***** content starts here ***** -->
       <div id="introduction">
         <h1>The Ketogenic Diet 101: A Detailed Beginner's Guide </h1>
         <p>The ketogenic diet is a low-carb, high-fat diet that offers many health benefits. </p>
@@ -160,9 +158,10 @@
         <p>At least in the beginning, it is important to eat until fullness and to avoid restricting calories too much. Usually a ketogenic diet causes weight loss without intentional calorie restriction.</p>
       </div>
       <br><br>
-      <div>
+      <div> <!-- ***** this is where i copied the content of my project ***** -->
         <p>Credits to Healthline article <a href="https://www.healthline.com/nutrition/ketogenic-diet-101" target="_blank">here.</a></p>
       </div>
     </article>
   </main>
 </body>
+</html>
