fix format after w3c validation

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Ketogenic Diet 101</title>
@@ -44,14 +46,12 @@
       <div id="difftype">
         <h2>Different Types of Ketogenic Diets</h2>
         <p>There are several versions of the ketogenic diet, including:</p>
-        <p>
-          <ul>
-            <li><b>Standard ketogenic diet (SKD):</b> This is a very low-carb, moderate-protein and high-fat diet. It typically contains 75% fat, 20% protein and only 5% carbs (1).</li>
-            <li><b>Cyclical ketogenic diet (CKD):</b>  This diet involves periods of higher-carb refeeds, such as 5 ketogenic days followed by 2 high-carb days.</li>
-            <li><b>Targeted ketogenic diet (TKD):</b> This diet allows you to add carbs around workouts.</li>
-            <li><b>High-protein ketogenic diet:</b> This is similar to a standard ketogenic diet, but includes more protein. The ratio is often 60% fat, 35% protein and 5% carbs.</li>    
-          </ul>
-        </p>
+        <ul>
+          <li><b>Standard ketogenic diet (SKD):</b> This is a very low-carb, moderate-protein and high-fat diet. It typically contains 75% fat, 20% protein and only 5% carbs (1).</li>
+          <li><b>Cyclical ketogenic diet (CKD):</b>  This diet involves periods of higher-carb refeeds, such as 5 ketogenic days followed by 2 high-carb days.</li>
+          <li><b>Targeted ketogenic diet (TKD):</b> This diet allows you to add carbs around workouts.</li>
+          <li><b>High-protein ketogenic diet:</b> This is similar to a standard ketogenic diet, but includes more protein. The ratio is often 60% fat, 35% protein and 5% carbs.</li>    
+        </ul>
         <p>However, only the standard and high-protein ketogenic diets have been studied extensively. Cyclical or targeted ketogenic diets are more advanced methods, and primarily used by bodybuilders or athletes.</p>
         <p>The information in this article mostly applies to the standard ketogenic diet (SKD), although many of the same principles also apply to the other versions.</p>
       </div>
@@ -82,18 +82,16 @@
         <h2>Other Health Benefits of the Ketogenic Diet</h2>
         <p>The ketogenic diet actually originated as a tool for treating neurological diseases, such as epilepsy.</p>
         <p>Studies have now shown that the diet can have benefits for a wide variety of different health conditions:</p>
-        <p>
-          <ul>
-            <li><b>Heart disease:</b> The ketogenic diet can improve risk factors like body fat, HDL levels, blood pressure and blood sugar.</li>
-            <li><b>Cancer:</b> The diet is currently being used to treat several types of cancer and slow tumor growth.</li>
-            <li><b>Alzheimer's disease:</b> The diet may reduce symptoms of Alzheimer's and slow down the disease's progression.</li>
-            <li><b>Epilepsy:</b> Research has shown that the ketogenic diet can cause massive reductions in seizures in epileptic children.</li>
-            <li><b>Parkinson's disease:</b> One study found that the diet helped improve symptoms of Parkinson's disease.</li>
-            <li><b>Polycystic ovary syndrome:</b> The ketogenic diet can help reduce insulin levels, which may play a key role in polycystic ovary syndrome.</li>
-            <li><b>Brain injuries:</b> One animal study found that the diet can reduce concussions and aid recovery after brain injury.</li>
-            <li><b>Acne:</b> Lower insulin levels and eating less sugar or processed foods may help improve acne.</li>
-          </ul>
-        </p>
+        <ul>
+          <li><b>Heart disease:</b> The ketogenic diet can improve risk factors like body fat, HDL levels, blood pressure and blood sugar.</li>
+          <li><b>Cancer:</b> The diet is currently being used to treat several types of cancer and slow tumor growth.</li>
+          <li><b>Alzheimer's disease:</b> The diet may reduce symptoms of Alzheimer's and slow down the disease's progression.</li>
+          <li><b>Epilepsy:</b> Research has shown that the ketogenic diet can cause massive reductions in seizures in epileptic children.</li>
+          <li><b>Parkinson's disease:</b> One study found that the diet helped improve symptoms of Parkinson's disease.</li>
+          <li><b>Polycystic ovary syndrome:</b> The ketogenic diet can help reduce insulin levels, which may play a key role in polycystic ovary syndrome.</li>
+          <li><b>Brain injuries:</b> One animal study found that the diet can reduce concussions and aid recovery after brain injury.</li>
+          <li><b>Acne:</b> Lower insulin levels and eating less sugar or processed foods may help improve acne.</li>
+        </ul>
         <p>However, keep in mind that research into many of these areas is far from conclusive.</p>
       </div>
       <br>
@@ -101,39 +99,35 @@
         <h2 >Foods to Avoid</h2>
         <p>In short, any food that is high in carbs should be limited.</p>
         <p>Here is a list of foods that need to be reduced or eliminated on a ketogenic diet:</p>
-        <p>
-          <ul>
-            <li><b>Sugary foods:</b> Soda, fruit juice, smoothies, cake, ice cream, candy, etc.</li>
-            <li><b>Grains or starches:</b> Wheat-based products, rice, pasta, cereal, etc.</li>
-            <li><b>Fruit:</b> All fruit, except small portions of berries like strawberries.</li>
-            <li><b>Beans or legumes:</b> Peas, kidney beans, lentils, chickpeas, etc.</li>
-            <li><b>Root vegetables and tubers:</b> Potatoes, sweet potatoes, carrots, parsnips, etc.</li>
-            <li><b>Low-fat or diet products:</b> These are highly processed and often high in carbs.</li>
-            <li><b>Some condiments or sauces:</b> These often contain sugar and unhealthy fat.</li>
-            <li><b>Unhealthy fat:</b> Limit your intake of processed vegetable oils, mayonnaise, etc.</li>
-            <li><b>Alcohol:</b> Due to its carb content, many alcoholic beverages can throw you out of ketosis.</li>
-            <li><b>Sugar-free diet foods:</b> These are often high in sugar alcohols, which can affect ketone levels in some cases. These foods also tend to be highly processed.</li>
-          </ul>
-        </p>
+        <ul>
+          <li><b>Sugary foods:</b> Soda, fruit juice, smoothies, cake, ice cream, candy, etc.</li>
+          <li><b>Grains or starches:</b> Wheat-based products, rice, pasta, cereal, etc.</li>
+          <li><b>Fruit:</b> All fruit, except small portions of berries like strawberries.</li>
+          <li><b>Beans or legumes:</b> Peas, kidney beans, lentils, chickpeas, etc.</li>
+          <li><b>Root vegetables and tubers:</b> Potatoes, sweet potatoes, carrots, parsnips, etc.</li>
+          <li><b>Low-fat or diet products:</b> These are highly processed and often high in carbs.</li>
+          <li><b>Some condiments or sauces:</b> These often contain sugar and unhealthy fat.</li>
+          <li><b>Unhealthy fat:</b> Limit your intake of processed vegetable oils, mayonnaise, etc.</li>
+          <li><b>Alcohol:</b> Due to its carb content, many alcoholic beverages can throw you out of ketosis.</li>
+          <li><b>Sugar-free diet foods:</b> These are often high in sugar alcohols, which can affect ketone levels in some cases. These foods also tend to be highly processed.</li>
+        </ul>
       </div>
       <br>
       <div id="foods2eat">
         <h2>Foods to Eat</h2>
         <p>You should base the majority of your meals around these foods:</p>
-        <p>
-          <ul>
-            <li><b>Meat:</b> Red meat, steak, ham, sausage, bacon, chicken and turkey.</li>
-            <li><b>Fatty fish:</b> Such as salmon, trout, tuna and mackerel.</li>
-            <li><b>Eggs:</b> Look for pastured or omega-3 whole eggs.</li>
-            <li><b>Butter and cream:</b> Look for grass-fed when possible.</li>
-            <li><b>Cheese:</b> Unprocessed cheese (cheddar, goat, cream, blue or mozzarella).</li>
-            <li><b>Nuts and seeds:</b> Almonds, walnuts, flaxseeds, pumpkin seeds, chia seeds, etc.</li>
-            <li><b>Healthy oils:</b> Primarily extra virgin olive oil, coconut oil and avocado oil.</li>
-            <li><b>Avocados:</b> Whole avocados or freshly made guacamole.</li>
-            <li><b>ow-carb veggies:</b>L Most green veggies, tomatoes, onions, peppers, etc.</li>
-            <li><b>Condiments:</b> You can use salt, pepper and various healthy herbs and spices.</li>
-          </ul>
-        </p>
+        <ul>
+          <li><b>Meat:</b> Red meat, steak, ham, sausage, bacon, chicken and turkey.</li>
+          <li><b>Fatty fish:</b> Such as salmon, trout, tuna and mackerel.</li>
+          <li><b>Eggs:</b> Look for pastured or omega-3 whole eggs.</li>
+          <li><b>Butter and cream:</b> Look for grass-fed when possible.</li>
+          <li><b>Cheese:</b> Unprocessed cheese (cheddar, goat, cream, blue or mozzarella).</li>
+          <li><b>Nuts and seeds:</b> Almonds, walnuts, flaxseeds, pumpkin seeds, chia seeds, etc.</li>
+          <li><b>Healthy oils:</b> Primarily extra virgin olive oil, coconut oil and avocado oil.</li>
+          <li><b>Avocados:</b> Whole avocados or freshly made guacamole.</li>
+          <li><b>ow-carb veggies:</b>L Most green veggies, tomatoes, onions, peppers, etc.</li>
+          <li><b>Condiments:</b> You can use salt, pepper and various healthy herbs and spices.</li>
+        </ul>
         <p>It is best to base your diet mostly on whole, single ingredient foods. Here is a list of 44 healthy low-carb foods.</p>
       </div>
       <br>
