--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
 </head>
 <body> <!-- ***** body begins here ***** -->
   <nav class="navigation"> <!-- ***** navigation ***** -->
-    <div>The Ketogenic Diet 101</div>
+    <div><h2>The Ketogenic Diet 101</h2></div>
     <div>
       <ul>
-        <li><a href="introduction">Introduction</a></li>
-        <li><a href="whatis">What is a Ketogenic Diet?</a></li>
-        <li><a href="difftype">Different Types of Ketogenic Diets</a></li>
-        <li><a href="ketoloseweight"></a> Ketogenic Diets Can Help You Lose Weight</li>
-        <li><a href="ketodiabetes"></a> Ketogenic Diets for Diabetes and Prediabetes</li>
-        <li><a href="otherbenefits"></a> Other Health Benefits of the Ketogenic Diet</li>
-        <li><a href="food2avoid"></a> Foods to Avoid</li>
-        <li><a href="foods2eat"></a> Foods to Eat</li>
-        <li><a href="tips4eating"></a> Tips for Eating Out on a Ketogenic Die</li>
-        <li><a href="sideeffects"></a> Side Effects and How to Minimize Them</li>  
+        <li><a href="#introduction">Introduction</a></li>
+        <li><a href="#whatis">What is a Ketogenic Diet?</a></li>
+        <li><a href="#difftype">Different Types of Ketogenic Diets</a></li>
+        <li><a href="#ketoloseweight">Ketogenic Diets Can Help You Lose Weight</a></li>
+        <li><a href="#ketodiabetes">Ketogenic Diets for Diabetes and Prediabetes</a></li>
+        <li><a href="#otherbenefits">Other Health Benefits of the Ketogenic Diet</a></li>
+        <li><a href="#food2avoid">Foods to Avoid</a></li>
+        <li><a href="#foods2eat">Foods to Eat</a></li>
+        <li><a href="#tips4eating">Tips for Eating Out on a Ketogenic Diet</a></li>
+        <li><a href="#sideeffects">Side Effects and How to Minimize Them</a></li>
       </ul>
     </div>
   </nav>
@@ -31,9 +31,9 @@
         <p>Over 20 studies show that this type of diet can help you lose weight and improve health.</p>
         <p>Ketogenic diets may even have benefits against diabetes, cancer, epilepsy and Alzheimer's disease.</p>
         <p>This article is a detailed beginner's guide to the ketogenic diet.</p>
-        <p>It contains everything you need to know.</p>             
+        <p>It contains everything you need to know.</p>
       </div>
-      <br>
+      <br><a href="./index.html">top</a>
       <div id="whatis">
         <h2>What is a Ketogenic Diet?</h2>
         <p>The ketogenic diet (often termed keto) is a very low-carb, high-fat diet that shares many similarities with the Atkins and low-carb diets.</p>
@@ -41,7 +41,7 @@
         <p>When this happens, your body becomes incredibly efficient at burning fat for energy. It also turns fat into ketones in the liver, which can supply energy for the brain.</p>
         <p>Ketogenic diets can cause massive reductions in blood sugar and insulin levels. This, along with the increased ketones, has numerous health benefits.</p>
       </div>
-      <br>
+      <br><a href="./index.html">top</a>
       <div id="difftype">
         <h2>Different Types of Ketogenic Diets</h2>
         <p>There are several versions of the ketogenic diet, including:</p>
@@ -49,12 +49,12 @@
           <li><b>Standard ketogenic diet (SKD):</b> This is a very low-carb, moderate-protein and high-fat diet. It typically contains 75% fat, 20% protein and only 5% carbs (1).</li>
           <li><b>Cyclical ketogenic diet (CKD):</b>  This diet involves periods of higher-carb refeeds, such as 5 ketogenic days followed by 2 high-carb days.</li>
           <li><b>Targeted ketogenic diet (TKD):</b> This diet allows you to add carbs around workouts.</li>
-          <li><b>High-protein ketogenic diet:</b> This is similar to a standard ketogenic diet, but includes more protein. The ratio is often 60% fat, 35% protein and 5% carbs.</li>    
+          <li><b>High-protein ketogenic diet:</b> This is similar to a standard ketogenic diet, but includes more protein. The ratio is often 60% fat, 35% protein and 5% carbs.</li>
         </ul>
         <p>However, only the standard and high-protein ketogenic diets have been studied extensively. Cyclical or targeted ketogenic diets are more advanced methods, and primarily used by bodybuilders or athletes.</p>
         <p>The information in this article mostly applies to the standard ketogenic diet (SKD), although many of the same principles also apply to the other versions.</p>
       </div>
-      <br>
+      <br><a href="./index.html">top</a>
       <div id="ketoloseweight">
         <h2>Ketogenic Diets Can Help You Lose Weight</h2>
         <p>A ketogenic diet is an effective way to lose weight and lower risk factors for disease.</p>
@@ -66,7 +66,7 @@
         <p>The increased ketones, lowered blood sugar levels and improved insulin sensitivity may also play a key role.</p>
         <p>For more details on the weight loss effects of a ketogenic diet, read this article: A Ketogenic Diet to Lose Weight and Fight Disease.</p>
       </div>
-      <br>
+      <br><a href="./index.html">top</a>
       <div id="ketodiabetes">
         <h2>Ketogenic Diets for Diabetes and Prediabetes</h2>
         <p>Diabetes is characterized by changes in metabolism, high blood sugar and impaired insulin function.</p>
@@ -76,7 +76,7 @@
         <p>In yet another study, the ketogenic group lost 24.4 lbs (11.1 kg), compared to 15.2 lbs (6.9 kg) in the higher-carb group. This is an important benefit when considering the link between weight and type 2 diabetes.</p>
         <p>Additionally, 95.2% of the ketogenic group was also able to stop or reduce diabetes medication, compared to 62% in the higher-carb group.</p>
       </div>
-      <br>
+      <br><a href="./index.html">top</a>
       <div id="otherbenefits">
         <h2>Other Health Benefits of the Ketogenic Diet</h2>
         <p>The ketogenic diet actually originated as a tool for treating neurological diseases, such as epilepsy.</p>
@@ -93,7 +93,7 @@
         </ul>
         <p>However, keep in mind that research into many of these areas is far from conclusive.</p>
       </div>
-      <br>
+      <br><a href="./index.html">top</a>
       <div id="food2avoid">
         <h2 >Foods to Avoid</h2>
         <p>In short, any food that is high in carbs should be limited.</p>
@@ -111,7 +111,7 @@
           <li><b>Sugar-free diet foods:</b> These are often high in sugar alcohols, which can affect ketone levels in some cases. These foods also tend to be highly processed.</li>
         </ul>
       </div>
-      <br>
+      <br><a href="./index.html">top</a>
       <div id="foods2eat">
         <h2>Foods to Eat</h2>
         <p>You should base the majority of your meals around these foods:</p>
@@ -129,7 +129,7 @@
         </ul>
         <p>It is best to base your diet mostly on whole, single ingredient foods. Here is a list of 44 healthy low-carb foods.</p>
       </div>
-      <br>
+      <br><a href="./index.html">top</a>
       <div id="tips4eating">
         <h2>Tips for Eating Out on a Ketogenic Diet</h2>
         <p>It is not very hard to make most restaurant meals keto-friendly when eating out.</p>
@@ -139,7 +139,7 @@
         <p>At Mexican restaurants, you can enjoy any type of meat with extra cheese, guacamole, salsa and sour cream.</p>
         <p>For dessert, ask for a mixed cheese board or double cream with berries.</p>
       </div>
-      <br>
+      <br><a href="./index.html">top</a>
       <div id="sideeffects">
         <h2>Side Effects and How to Minimize Them</h2>
         <p>Although the ketogenic diet is safe for healthy people, there may be some initial side effects while your body adapts.</p>
@@ -150,7 +150,7 @@
         <p>For minerals, try taking 3,000–4,000 mg of sodium, 1,000 mg of potassium and 300 mg of magnesium per day to minimize side effects.</p>
         <p>At least in the beginning, it is important to eat until fullness and to avoid restricting calories too much. Usually a ketogenic diet causes weight loss without intentional calorie restriction.</p>
       </div>
-      <br><br>
+      <br><a href="./index.html">top</a><br>
       <div> <!-- ***** this is where i copied the content of my project ***** -->
         <p>Credits to Healthline article <a href="https://www.healthline.com/nutrition/ketogenic-diet-101" target="_blank">here.</a></p>
       </div>
