Final edit after validation

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <p>For minerals, try taking 3,000–4,000 mg of sodium, 1,000 mg of potassium and 300 mg of magnesium per day to minimize side effects.</p>
         <p>At least in the beginning, it is important to eat until fullness and to avoid restricting calories too much. Usually a ketogenic diet causes weight loss without intentional calorie restriction.</p>
       </div>
-      <a href="./index.html"><img src="http://www.lovewell-blake.co.uk/includes/imgs/icon-backtop.png" height="50" width="50" border="0" alt="top icon"></a><br> <!-- scroll to toppage -->
+      <a href="./index.html"><img src="http://www.lovewell-blake.co.uk/includes/imgs/icon-backtop.png" height="50" width="50" alt="top icon"></a><br> <!-- scroll to toppage -->
       <div> <!-- ***** this is where i copied the content of my project ***** -->
         <p class="credits">
           Credits:<a href="https://www.healthline.com/nutrition/ketogenic-diet-101" target="_blank">Healthline</a> and <a href="https://www.dietdoctor.com/low-carb/keto">Diet Doctor</a> for content and images I used on this project.
